--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
 <body>
+
+
+    <div class="main-container">
+        <div class="warrior-cards-container">
+            <div class="warrior-cards-wrapper">
+                <div class="card-wrapper brown-bg">
+                    <div class="card-self">
+                       <div class="card-item-1">
+                       </div>
+                       <div class="card-item-2">
+                       </div>
+                       <div class="card-item-3">
+                       </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     
+        <div class="button-section">
+    
+        </div>
+    </div>
+
 
     <script src="./app.js"></script>
 </body>
