--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Game Warrior - HomeWork</title>
 
     <link rel="stylesheet" href="style.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/542deca37c.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
 
@@ -18,10 +18,16 @@
                 <div class="card-wrapper brown-bg">
                     <div class="card-self">
                        <div class="card-item-1">
+                            <h1></h1>
+                            <span></span>
                        </div>
                        <div class="card-item-2">
+                            <img src="" class="block" alt="">
                        </div>
                        <div class="card-item-3">
+                            <div class="card-icon"><i class="fas fa-fist-raised"></i><span class="block"></span></div>
+                            <div class="card-icon"><b>LVL</b><span class="block"></span></div>
+                            <div class="card-icon"><i class="fas fa-bahai"></i><span class="block"></span></div>
                        </div>
                     </div>
                 </div>
@@ -32,7 +38,6 @@
     
         </div>
     </div>
-
 
     <script src="./app.js"></script>
 </body>
