Generate a Warrior button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </div>
     
         <div class="button-section">
-    
+            <div class="button-inner">
+            </div>
+                <button class="generate-btn block" id="generateBtn">Create a Warrior</button>
         </div>
     </div>
 
