--- a/index.html
+++ b/index.html
@@ -14,23 +14,7 @@
 
     <div class="main-container">
         <div class="warrior-cards-container">
-            <div class="warrior-cards-wrapper">
-                <div class="card-wrapper brown-bg">
-                    <div class="card-self">
-                       <div class="card-item-1">
-                            <h1></h1>
-                            <span></span>
-                       </div>
-                       <div class="card-item-2">
-                            <img src="" class="block" alt="">
-                       </div>
-                       <div class="card-item-3">
-                            <div class="card-icon"><i class="fas fa-fist-raised"></i><span class="block"></span></div>
-                            <div class="card-icon"><b>LVL</b><span class="block"></span></div>
-                            <div class="card-icon"><i class="fas fa-bahai"></i><span class="block"></span></div>
-                       </div>
-                    </div>
-                </div>
+            <div class="warrior-cards-wrapper" id="cardsWrapper">
             </div>
         </div>
     
@@ -44,3 +28,4 @@
     <script src="./app.js"></script>
 </body>
 </html>
+
