Generate buttom redesign and card transitions

--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
         </div>
     
         <div class="button-section">
-            <div class="button-inner">
-            </div>
-                <button class="generate-btn block" id="generateBtn">Create a Warrior</button>
+            <button class="generate-btn block" id="generateBtn">Create Warrior</button>
         </div>
-    </div>
 
     <script src="./app.js"></script>
 </body>
 </html>
-
